Break lines on any character to avoid horizontal scrollbar (#586)

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/index.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/index.css
@@ -23,6 +23,7 @@ limitations under the License.
   font-size: 13px;
   font-family: monospace;
   white-space: pre-wrap;
+  word-break: break-all;
 }
 .json-markup-key {
   font-weight: bold;
